# dining-philosophers

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: dining_philosophers.cpp  dining_philosophers.h  philosopher.cpp  philosopher.h  stick.cpp  stick.h
